examples/nginx-ingress.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: examples
  labels:
    name: examples
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-example
  namespace: examples
spec:
  selector:
    matchLabels:
      app: nginx-example
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-example
    spec:
      containers:
      - name: nginx
        image: nginx:1.22.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-example
  namespace: examples
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx-example
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-example
  namespace: examples
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: "nginx-example.apps.BASE_DOMAIN"
    external-dns.alpha.kubernetes.io/ttl: "120"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  tls:
  - hosts:
    - nginx-example.apps.BASE_DOMAIN
    secretName: nginx-example-tls
  rules:
  - host: nginx-example.apps.BASE_DOMAIN
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-example
            port:
              number: 80
